

set(BUILD_CURL_EXE OFF)
set(BUILD_SHARED_LIBS OFF)
set(CURL_STATIC_CRT ON)

# Enable only needed protocols
set(CURL_DISABLE_FTP ON)
set(CURL_DISABLE_LDAP ON)
set(CURL_DISABLE_TELNET ON)
set(CURL_DISABLE_DICT ON)
set(CURL_DISABLE_FILE ON)
set(CURL_DISABLE_TFTP ON)
set(CURL_DISABLE_HTTP OFF)
set(CURL_DISABLE_LDAPS ON)
set(CURL_DISABLE_RTSP ON)
set(CURL_DISABLE_PROXY OFF)
set(CURL_DISABLE_POP3 ON)
set(CURL_DISABLE_IMAP ON)
set(CURL_DISABLE_SMB ON)
set(CURL_DISABLE_SMTP ON)
set(CURL_DISABLE_GOPHER ON)
set(CURL_ENABLE_MQTT OFF)

set(CMAKE_USE_OPENSSL ON)

add_subdirectory(curl-curl-7_70_0)

SET_PROPERTY(TARGET libcurl PROPERTY FOLDER "External Libs")
