

# set(BUILD_CURL_EXE OFF)
# set(BUILD_SHARED_LIBS OFF)
# if(MSVC)
   # set(CURL_STATIC_CRT ON)
# endif()

# Enable only needed protocols
# set(CURL_DISABLE_FTP ON)
# set(CURL_DISABLE_LDAP ON)
# set(CURL_DISABLE_TELNET ON)
# set(CURL_DISABLE_DICT ON)
# set(CURL_DISABLE_FILE ON)
# set(CURL_DISABLE_TFTP ON)
# set(CURL_DISABLE_HTTP OFF)
# set(CURL_DISABLE_LDAPS ON)
# set(CURL_DISABLE_RTSP ON)
# set(CURL_DISABLE_PROXY OFF)
# set(CURL_DISABLE_POP3 ON)
# set(CURL_DISABLE_IMAP ON)
# set(CURL_DISABLE_SMB ON)
# set(CURL_DISABLE_SMTP ON)
# set(CURL_DISABLE_GOPHER ON)
# set(CURL_ENABLE_MQTT OFF)

# set(CMAKE_USE_OPENSSL ON)

# add_subdirectory(curl-curl-7_72_0)

include(ExternalProject)


set(CURL_ROOT ${CMAKE_BINARY_DIR}/external-libs/curl)

list(APPEND CURL_BUILD_ARGS "-DBUILD_CURL_EXE=OFF")
list(APPEND CURL_BUILD_ARGS "-DBUILD_SHARED_LIBS=OFF")
if(WIN32)
   list(APPEND CURL_BUILD_ARGS "-DCURL_STATIC_CRT=ON")
endif()

# Enable only needed protocols
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_FTP=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_LDAP=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_TELNET=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_DICT=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_FILE=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_TFTP=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_HTTP=OFF")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_LDAPS=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_RTSP=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_PROXY=OFF")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_POP3=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_IMAP=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_SMB=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_SMTP=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_GOPHER=ON")
list(APPEND CURL_BUILD_ARGS "-DCURL_DISABLE_MQTT=ON")
list(APPEND CURL_BUILD_ARGS "-DCMAKE_USE_OPENSSL=ON")


### MARCHE PAS : ça définit une variable CMake, pas une directive de préprocessing ! ! !
list(APPEND CURL_BUILD_ARGS "-DCURL_STATICLIB=1")



ExternalProject_Add(curl_build
   URL               https://curl.se/download/curl-7.76.0.zip
   PREFIX            ${CURL_ROOT}
   CMAKE_ARGS        ${CURL_BUILD_ARGS}
   INSTALL_COMMAND   ""
   INSTALL_DIR       ${CURL_ROOT} #TODO utile ?
   BUILD_ALWAYS      OFF
)

SET_PROPERTY(TARGET curl_build PROPERTY FOLDER "External Libs")

ExternalProject_Get_Property(curl_build INSTALL_DIR)
set(CURL_INCLUDE_DIR ${INSTALL_DIR}/src/curl_build/include PARENT_SCOPE)
set(CURL_LIBRARY ${INSTALL_DIR}/src/curl_build-build/lib/$<CONFIG>/libcurl$<$<CONFIG:Debug>:-d>.lib PARENT_SCOPE)
